// Copyright 2018 The Swarming Authors. All rights reserved.
// Use of this source code is governed by the Apache v2.0 license that can be
// found in the LICENSE file.

syntax = "proto3";

package buildbucket.v2;

option go_package = "go.chromium.org/luci/buildbucket/proto;buildbucketpb";

import "google/protobuf/field_mask.proto";
import "go.chromium.org/luci/buildbucket/proto/build.proto";

// Manages builds.
service Builds {
  // Gets a build.
  rpc GetBuild(GetBuildRequest) returns (Build) {};
}

// A request message for GetBuild rpc.
message GetBuildRequest {
  // Build id.
  // Mutually exclusive with builder and number.
  int64 id = 1;

  // Builder of the build.
  // Requires number. Mutually exclusive with id.
  Builder.ID builder = 2;
  // Build number.
  // Requires builder. Mutually exclusive with id.
  int32 build_number = 3;

  // Field mask to apply to the response, e.g. {paths: ["steps"]} to include
  // steps in the response. See Build message comments for the list of fields
  // excluded by default.
  //
  // Supports advanced semantics, see
  // https://chromium.googlesource.com/infra/luci/luci-py/+/f9ae69a37c4bdd0e08a8b0f7e123f6e403e774eb/appengine/components/components/protoutil/field_masks.py#7
  google.protobuf.FieldMask fields = 100;
}
